--- a/reports/NYKAA_report.html
+++ b/reports/NYKAA_report.html
@@ -16,7 +16,7 @@
 <h1>Stock Report: Nykaa (FSN E-Commerce Ventures Ltd)</h1>
 <h2>Date: March 13, 2025</h2>
 <h2>Brought to you by: 
-    <img src="/images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;">
+    <img src="../images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;">
 </h2>
 <hr />
 <p><strong>Disclaimer</strong>: This AI-generated report is for informational and educational purposes only. It is not financial advice. Investors and traders should conduct their own research before making any investment decisions. The analysis is based on publicly available data and may not fully reflect Nykaa's financial condition or future performance.</p>
@@ -281,4 +281,4 @@
 <li>Ideal for growth and thematic investors with medium-term horizons and moderate risk tolerance</li>
 </ul>
 <hr />
-<p>→ Stay updated with <img src="/images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
+<p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
