--- a/reports/LEMONTREE_report.html
+++ b/reports/LEMONTREE_report.html
@@ -16,7 +16,7 @@
 <h1>Stock Report: Lemon Tree Hotels Ltd</h1>
 <h2>Date: March 12, 2025</h2>
 <h2>Brought to you by: 
-    <img src="/images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;">
+    <img src="../images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;">
 </h2>
 <hr />
 <p><strong>Disclaimer</strong>: This AI-generated report is for informational and educational purposes only. It is not financial advice. Investors and traders should conduct their own research before making any investment decisions. The analysis is based on publicly available data and may not fully reflect Lemon Tree Hotels Ltd's financial condition or future performance.</p>
@@ -277,4 +277,4 @@
 <li>Intrinsic value estimate (₹144.37) suggests 13.6% upside from current levels for patient investors</li>
 </ul>
 <hr />
-<p>→ Stay updated with <img src="/images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
+<p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
