--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
             background-color: #ffffff;
             margin-top: 5px;
             border-radius: 10px;
-            box-shadow: 0 0 5px #2C3E50, 0 0 10px #2C3E50,
-            0 0 10px #2C3E50;
+            box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.3), 0 2px 5px 0 rgba(0, 0, 0, 0.6);
+            /* transform: translateY(-5px); */
         }
 
         .navbg-dark {
@@ -282,9 +282,10 @@
     <!-- Banner -->
     <header class="banner text-white text-center py-5 mt-5 align-items-center align-content-center">
         <div class="container align-items-center">
-            <img src="./images/inwelth_logo_white.png" width="50%" alt="" style="z-index: -10;">
-            <div style="display: flex; align-items: center; justify-content: center;">
-                <h1>Your Guide for </h1>&nbsp;&nbsp;<h1 class="typing" id="typing-text"></h1>
+            <img src="./images/inwelth_logo_white.png" id="banner_logo" width="50%" alt="" style="z-index: -10;">
+            <div id="typing_box" style="display: flex; align-items: center; justify-content: center;">
+                <h1>Your Ultimate Guide for </h1> &nbsp;&nbsp;
+                <h1 class="typing" id="typing-text"></h1>
             </div>
             <h6 style="font-size: large; padding-top: 30px;">inWelth simplifies stock analysis using AI. No more jargons, only actionable insights.</h6>
         </div>
@@ -307,7 +308,7 @@
     
             <iframe id="report-frame" class="w-100 mt-3" style="display: none; height: auto; background-color: #ffffff; overflow-y: hidden;"></iframe>
             <div class="w-100 mt-3" style="display: flex; justify-content: center;">
-                <button id="copyURL" class="btn btn-primary" style="display: none; justify-items: middle;">Copy report link for sharing?</button>
+                <button id="copyURL" class="btn btn-primary" style="display: none; justify-items: middle;">Copy report link?</button>
             </div>
         </div>
     </section>
@@ -560,6 +561,17 @@
         }
 
         setTimeout(typeEffect, 500); // Start typing after delay
+
+        function adjust_banner() {
+            if (window.innerWidth < 768) {
+                document.getElementById('banner_logo').style.width = '100%';
+                document.getElementById('typing_box').style.display = 'block';
+                document.getElementById('typing_box').style.paddingTop = '30px';
+            }
+        }
+
+        window.addEventListener("load", adjust_banner);
+        window.addEventListener("resize", adjust_banner);
     </script>
 </body>
 </html>
