--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
     <!-- Banner -->
     <header class="banner text-white text-center py-5 mt-5 align-items-center align-content-center">
         <div class="container align-items-center">
-            <img src="./images/inwelth_logo_white.png" id="banner_logo" width="50%" alt="" style="z-index: -10;">
-            <div id="typing_box" style="display: flex; align-items: center; justify-content: center;">
+            <img src="./images/inwelth_logo_white.png" id="banner_logo" width="100%" alt="" style="z-index: -10;">
+            <div id="typing_box" style="display: block; align-items: center; justify-content: center; padding-top: 30px;">
                 <h1>Your Ultimate Guide for </h1> &nbsp;&nbsp;
                 <h1 class="typing" id="typing-text"></h1>
             </div>
@@ -308,7 +308,7 @@
     
             <iframe id="report-frame" class="w-100 mt-3" style="display: none; height: auto; background-color: #ffffff; overflow-y: hidden;"></iframe>
             <div class="w-100 mt-3" style="display: flex; justify-content: center;">
-                <button id="copyURL" class="btn btn-primary" style="display: none; justify-items: middle;">Copy report link?</button>
+                <button id="copyURL" class="btn btn-primary" style="display: none; justify-items: middle;">Copy report link to share?</button>
             </div>
         </div>
     </section>
@@ -365,6 +365,21 @@
     
     <!-- Referral Tracking Script -->
     <script>
+        function adjust_banner() {
+            if (window.innerWidth < 768) {
+                document.getElementById('banner_logo').style.width = '100%';
+                document.getElementById('typing_box').style.display = 'block';
+                document.getElementById('typing_box').style.paddingTop = '30px';
+            } else {
+                document.getElementById('banner_logo').style.width = '50%';
+                document.getElementById('typing_box').style.display = 'flex';
+                document.getElementById('typing_box').style.paddingTop = '0px';
+            }
+        }
+
+        window.addEventListener("load", adjust_banner);
+        window.addEventListener("resize", adjust_banner);
+
         document.addEventListener('DOMContentLoaded', async function () {
             const stockContainer = document.querySelector('.stock-container');
 
@@ -561,17 +576,6 @@
         }
 
         setTimeout(typeEffect, 500); // Start typing after delay
-
-        function adjust_banner() {
-            if (window.innerWidth < 768) {
-                document.getElementById('banner_logo').style.width = '100%';
-                document.getElementById('typing_box').style.display = 'block';
-                document.getElementById('typing_box').style.paddingTop = '30px';
-            }
-        }
-
-        window.addEventListener("load", adjust_banner);
-        window.addEventListener("resize", adjust_banner);
     </script>
 </body>
 </html>
