--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 
                     stockCard.innerHTML = `
                         <img src="./images/${stock.name + "_logo.png"}" alt="${stock.name}">
-                        <span>${stock.name}</span>
+                        <span>${stock.fullname}</span>
                     `;
 
                     stockContainer.appendChild(stockCard);
