--- a/reports/BHEL_report.html
+++ b/reports/BHEL_report.html
@@ -15,9 +15,7 @@
 </style>
 <h1>Stock Report: Bharat Heavy Electricals Ltd (BHEL)</h1>
 <h2>Date: March 13, 2025</h2>
-<h2>Brought to you by: 
-    <img src="../images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;">
-</h2>
+<h2>Brought to you by: Bolt⚡</h2>
 <hr />
 <p><strong>Disclaimer</strong>: This AI-generated report is for informational and educational purposes only. It is not financial advice. Investors and traders should conduct their own research before making any investment decisions. The analysis is based on publicly available data and may not fully reflect BHEL's financial condition or future performance.</p>
 <hr />
@@ -50,6 +48,7 @@
 </li>
 </ul>
 <p>Above mentioned personality investors might take new positions or hold on/add more to their existing holdings, while other personalities might consider exiting or staying away.</p>
+<p>Checkout the full list of popular personalities to know who you are and where you fit in!! <link to personalities page></p>
 <hr />
 <h2>Stock Snapshot 📊 - A Sneak Peak:</h2>
 <ul>
@@ -281,6 +280,7 @@
 </tr>
 </tbody>
 </table>
+<p><chart image to be inserted here></p>
 <ul>
 <li><strong>💡 Key Takeaway</strong> - The bearish technical setup with prices below key moving averages and decreasing volume suggests continued downward pressure</li>
 </ul>
@@ -308,4 +308,4 @@
 <li>Diversification efforts and strong order book provide potential catalysts for future turnaround, but significant improvement in financial metrics is needed first</li>
 </ul>
 <hr />
-<p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
+<p>→ Stay updated with <strong>Bolt⚡</strong> for more AI stock insights!</p>
