--- a/reports/ZOMATO_report.html
+++ b/reports/ZOMATO_report.html
@@ -14,10 +14,8 @@
     }
 </style>
 <h1>Stock Report: Zomato Ltd.</h1>
-<h2>Date: March 13, 2025</h2>
-<h2>Brought to you by: 
-    <img src="../images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;">
-</h2>
+<h2>Date: 2025-03-13</h2>
+<h2>Brought to you by: Bolt⚡</h2>
 <hr />
 <p><strong>Disclaimer</strong>: This AI-generated report is for informational and educational purposes only. It is not financial advice. Investors and traders should conduct their own research before making any investment decisions. The analysis is based on publicly available data and may not fully reflect Zomato Ltd.'s financial condition or future performance.</p>
 <hr />
@@ -49,6 +47,7 @@
 </li>
 </ul>
 <p>Above mentioned personality investors might take new positions or hold on/add more to their existing holdings, while other personalities might consider exiting or staying away.</p>
+<p>Checkout the full list of popular personalities to know who you are and where you fit in!! <link to personalities page></p>
 <hr />
 <h2>Stock Snapshot 📊 - A Sneak Peak:</h2>
 <ul>
@@ -277,6 +276,7 @@
 </tr>
 </tbody>
 </table>
+<p><chart image to be inserted here></p>
 <ul>
 <li><strong>💡 Key Takeaway</strong> - The stock is in a clear downtrend with significant selling pressure, having declined from ₹288 levels. Technical indicators show continued weakness with no clear reversal signals yet.</li>
 </ul>
@@ -304,4 +304,4 @@
 <li>Regulatory challenges including antitrust investigations remain the biggest near-term risk to the company's business model.</li>
 </ul>
 <hr />
-<p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
+<p>→ Stay updated with <strong>Bolt⚡</strong> for more AI stock insights!</p>
