--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         .stock-card {
             cursor: pointer;
             transition: transform 0.2s;
-            width: 200px;
+            min-width: 200px;
+            max-width: 200px;
             text-align: center;
             padding: 15px;
             border-radius: 10px;
