--- a/reports/HAL_report.html
+++ b/reports/HAL_report.html
@@ -15,7 +15,7 @@
 </style>
 <h1>Stock Report: Hindustan Aeronautics Ltd (HAL)</h1>
 <h2>Date: March 12, 2025</h2>
-<h2>Brought to you by: Bolt⚡</h2>
+<h2>Brought to you by: <img src="../images/inwelth_logo.png" alt="Logo" height="40" style="display: inline-block; position: relative; top: 3px;"></h2>
 <hr />
 <p><strong>Disclaimer</strong>: This AI-generated report is for informational and educational purposes only. It is not financial advice. Investors and traders should conduct their own research before making any investment decisions. The analysis is based on publicly available data and may not fully reflect Hindustan Aeronautics Ltd (HAL)'s financial condition or future performance.</p>
 <hr />
@@ -296,4 +296,4 @@
 <li>The 13.83% yearly stock price increase significantly underperforms sector peers despite solid fundamentals, suggesting potential for relative valuation improvement</li>
 </ul>
 <hr />
-<p>→ Stay updated with <strong>Bolt⚡</strong> for more AI stock insights!</p>
+<p>→ Stay updated with <img src="../images/inwelth_logo.png" alt="Logo" height="30" style="display: inline-block; position: relative; top: 1px;"> for more AI stock insights!</p>
