--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
                     <span style="white-space: normal;">Bharat Heavy Electronics Ltd Bharat Heavy Electronics</span>
                 </div>
             </div>
+
+            <p>* Reports will be updated once a month or based on high demand.</p>
     
             <iframe id="report-frame" class="w-100 mt-3" style="display: none; height: auto; background-color: #ffffff; overflow-y: hidden;"></iframe>
             <div class="w-100 mt-3" style="display: flex; justify-content: center;">
